--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
+    "node-fetch": "^2.6.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
